--- a/index.html
+++ b/index.html
@@ -1,49 +1,75 @@
-<!DOCTYPE html>
-<html lang="es">
-
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Juego de Ruleta</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/estilos.css">
-  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Quién Quiere Ser Millonario</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-  <div class="container" id="contenedor-juego">
-    <div class="row">
-      <div class="col-md-6">
-        <div class="contenedor-ruleta">
-          <div class="ruleta"></div>
-        </div>
-        <button class="btn btn-primary" id="jugar" onclick="jugar()">Jugar</button>
+  <header class="header text-center py-5 bg-dark text-white">
+    <h2>Quién Quiere Ser Marlon?</h2>
+    <h3>Puntuación máxima: 817800pts</h3>
+  </header>
+  <div class="main-container p-5 bg-dark rounded">
+    <div class="upper-container">
+      <div class="team-selection mb-3">
+        <label for="current-team" class="text-white">Seleccionar Equipo:</label>
+        <select id="current-team" class="form-control">
+          <option value="team1">Equipo 1</option>
+          <option value="team2">Equipo 2</option>
+          <option value="team3">Equipo 3</option>
+        </select>
+        <div id="current-team-name" class="hidden"></div>
       </div>
-      <div class="col-md-6" id="pregunta">
-        <h2 id="question">Pregunta...</h2>
-        <div id="respuestas" class="btn-group-vertical">
-          <button class="btn btn-default a" onclick="responder(0)">A: ...</button>
-          <button class="btn btn-default b" onclick="responder(1)">B: ...</button>
-          <button class="btn btn-default c" onclick="responder(2)">C: ...</button>
-          <button class="btn btn-default d" onclick="responder(3)">D: ...</button>
-        </div>
+
+      <button class="btn btn-warning start">COMENZAR</button>
+      <div class="game-status-container hidden"></div>
+    </div>
+    <div class="next-question-container hidden">
+      <button class="btn btn-primary next-question">SIGUIENTE PREGUNTA</button>
+    </div>
+    <div class="game-container hidden">
+      <div class="help-buttons">
+        <div class="timer">40</div>
+        <button class="btn btn-secondary second-guess-button">2da Opción</button>
+        <button class="btn btn-info fifty-fifty">50 : 50</button>
+      </div>
+      <div class="question-container"></div>
+      <div class="answer-container">
+        <ol type="A" class="answers"></ol>
       </div>
     </div>
-    <div class="row" id="ayudas">
-      <div class="col-md-12">
-        <button class="btn btn-info" onclick="ayuda5050()">50:50</button>
-        <button class="btn btn-info" onclick="ayudaAmigo()">Llamar a un amigo</button>
-        <button class="btn btn-info" onclick="ayudaPublico()">Consultar al público</button>
-      </div>
-    </div>
-    <div class="row" id="tabla-premios">
-      <div class="col-md-12 text-center">
-        Puntaje: 0 | Tiempo: 30 segundos
-      </div>
+    <div class="scoreboard">
+      <table class="table table-bordered table-dark">
+        <thead>
+          <tr>
+            <th>Equipo</th>
+            <th>Puntuación</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Equipo 1</td>
+            <td id="team1-score">0</td>
+          </tr>
+          <tr>
+            <td>Equipo 2</td>
+            <td id="team2-score">0</td>
+          </tr>
+          <tr>
+            <td>Equipo 3</td>
+            <td id="team3-score">0</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="js/juego.js"></script>
+  <audio id="lets-play" src="./sounds/lets_play.mp3"></audio>
+  <audio id="easy" src="./sounds/easy.mp3"></audio>
+  <audio id="wrong-answer" src="./sounds/wrong_answer.mp3"></audio>
+  <audio id="correct-answer" src="./sounds/correct_answer.mp3"></audio>
+  <script type="text/javascript" src="main.js"></script>
 </body>
-
 </html>
